fixing media info buttons on mobile

--- a/src/pages/MediaInfo/MediaInfo.scss
+++ b/src/pages/MediaInfo/MediaInfo.scss
@@ -90,8 +90,6 @@
 
     .media-info-image-container {
       margin: 0 auto;
-      width: 100%;
-      max-width: 450px;
       text-align: center;
     }
 
